--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -5,3 +5,26 @@ h1 {
     font-size: 50px;
 }
 
+.forecast-card {
+    background-color: turquoise;
+    margin: 10px;
+    border-radius: 25%;
+    text-align: center;
+}
+
+
+.submit-btn {
+    background-color: turquoise;
+}
+
+.forecast-date {
+    white-space: nowrap;
+    font-size: 15px;
+    text-align: center;
+    font-weight: bold;
+}
+
+.city-btn {
+    border: 1px solid black;
+}
+
